# pantri

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/accounts/: models.py  serializers.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/core/: settings.py  urls.py
backend/inventory/: admin.py  models.py  serializers.py  urls.py  views.py
backend/inventory/migrations/: 0001_initial.py  0002_location_capacity.py
frontend/: README.MD  package-lock.json  package.json
frontend/api/: client.ts  groceryList.ts  inventory.ts  pantry.ts
frontend/app/: _layout.tsx  login.tsx
frontend/app/(tabs)/: _layout.tsx  index.tsx  two.tsx
frontend/app/list/: [uuid].tsx
frontend/components/: CapacityBar.tsx  CreateListModal.tsx  GroceryListCard.tsx  LocationFilter.tsx  LocationLists.tsx  PantryHeader.tsx  PantryList.tsx
frontend/hooks/: useAuth.ts  useGroceryList.ts  useGroceryLists.ts  useLocations.ts  usePantryItems.ts
frontend/types/: api.ts
